[build-system]
requires= ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "py_csv"
version = "25.6.2b2"
authors = [
    {name="ryderX86", email="ryder@r86.me"}
]
description = "Quick & dirty CSV library for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ryderX86/py_csv"
Issues = "https://github.com/ryderX86/py_csv/issues"